# difiew

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs
src/manager/: mod.rs
src/node/: mod.rs
src/node/majority_tracker/: mod.rs
src/protocol/: metadata.rs  mod.rs
src/store/: command.rs  error.rs  mod.rs  result.rs
src/utils/: bin_args.rs  mod.rs  swarm_builder.rs  timestamp.rs
